[gd_scene load_steps=2 format=3 uid="uid://bn3kv83cw1fcs"]

[ext_resource type="Script" uid="uid://bg2k8f7ua2l7l" path="res://scripts/ui/save_slot.gd" id="1_tk20w"]

[node name="SaveSlot" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_tk20w")
save_slot_id = null

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -19.5
offset_right = 39.0
offset_bottom = 19.5
grow_vertical = 2

[node name="SlotIDLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Slot I"
horizontal_alignment = 1

[node name="ColorRect" type="ColorRect" parent="VBoxContainer"]
custom_minimum_size = Vector2(80, 45)
layout_mode = 2
size_flags_vertical = 3
color = Color(0.59, 0.59, 0.59, 1)

[node name="Items" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="UnsavedItems" type="HBoxContainer" parent="VBoxContainer/Items"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="Button" type="Button" parent="VBoxContainer/Items/UnsavedItems"]
layout_mode = 2

[node name="SavedItems" type="VBoxContainer" parent="VBoxContainer/Items"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Items/SavedItems"]
layout_mode = 2
alignment = 1

[node name="Button2" type="Button" parent="VBoxContainer/Items/SavedItems/HBoxContainer"]
layout_mode = 2

[node name="Button3" type="Button" parent="VBoxContainer/Items/SavedItems/HBoxContainer"]
layout_mode = 2

[node name="SavedDate" type="Label" parent="VBoxContainer/Items/SavedItems"]
layout_mode = 2
theme_override_font_sizes/font_size = 4
text = "Last Saved at 09:15 PM on 10/31/25, Tue"
